@@ -8,6 +8,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.3  2004/12/09 18:39:01  jimmyo
+# Added more sensible autoconf to generic/munin_graph,munin_update,sybase_space.
+#
 # Revision 1.2  2004/01/29 19:39:00  jimmyo
 # Generic plugins now use printf instead of echo -n, as this is more portable (SF#885564)
 #
@@ -36,7 +39,11 @@ if [ ! "$UPDATE_STATSFILE" ]; then
 fi
 
 if [ "$1" = "autoconf" ]; then
-	echo no
+	if [ -f $UPDATE_STATSFILE ]; then
+	    echo "yes"
+	    exit 0
+	fi
+	echo "no (logfile not readable)"
 	exit 1
 fi
 
