@@ -33,9 +33,12 @@
 # 	SYBASE_HOST  - Host
 # 	
 # 	 $Log$
+# 	 Revision 1.4  2004/12/09 18:39:01  jimmyo
+# 	 Added more sensible autoconf to generic/munin_graph,munin_update,sybase_space.
+#
 # 	 Revision 1.3  2004/11/16 20:10:53  jimmyo
 # 	 License cleanups.
-#
+# 	
 # 	 Revision 1.2  2004/05/20 19:02:36  jimmyo
 # 	 Set categories on a bunch of plugins
 # 	
@@ -68,6 +71,17 @@ my $db   = $ENV{SYBASE_DB}   || "master";
 $ENV{SYBASE} = $ENV{SYBASE}  || "/usr/local/sybase";
 
 my $dbh = DBI->connect ("dbi:Sybase:$db;host=$host", $user, $pass);
+
+if ($ARGV[0] eq "autoconf")
+{
+    if (!$dbh)
+    {
+	print "no (Could not connect to database.)\n";
+	exit 1;
+    }
+    print "yes\n";
+    exit 0;
+}
 
 if (!$dbh) 
 {
